unpackaged/main/default/objects/OrderApi__Item_Class__c/OrderApi__Item_Class__c.object-meta.xml
<CustomObject>
    <description>Master categorization and logic driver for Items and Item purchase work flow.</description>
    <label>Item Class</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>