unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/DDApi__Is_Direct_Debit_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Is_Direct_Debit_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Items created with this Item Class will automatically be enabled with Direct Debit controls and features. Defaults unchecked.</description>
    <inlineHelpText>When checked, created Items will be enabled with Direct Debit controls and features. Defaults unchecked.</inlineHelpText>
    <label>Is Direct Debit Enabled</label>
    <type>Checkbox</type>
</CustomField>