unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/EventApi__Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Event.</description>
    <inlineHelpText>Link to related Event.</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Item Classes</relationshipLabel>
    <relationshipName>Item_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>