unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/EventApi__Is_Event_Session__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Event_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Items linked to this Item Class may only be purchased if they are the direct child of a &quot;Registration&quot; record related to an &quot;Active&quot; Event. Defaults unchecked.</description>
    <inlineHelpText>When checked, Items linked to this Item Class may only be purchased if they are the direct child of a &quot;Registration&quot; record related to an &quot;Active&quot; Event. Defaults unchecked.</inlineHelpText>
    <label>Is Event Session</label>
    <type>Checkbox</type>
</CustomField>