unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/EventApi__Is_Schedule_Item_Class__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Schedule_Item_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated ** Checked if Item Class is related to Event Ticket Type.</description>
    <inlineHelpText>** System Calculated ** Checked if Item Class is related to Event Ticket Type.</inlineHelpText>
    <label>Is Schedule Item Class</label>
    <type>Checkbox</type>
</CustomField>