unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/EventApi__Is_Sponsor_Class__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Sponsor_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated ** Checked if Item Class is related to Event Sponsor Package.</description>
    <inlineHelpText>** System Calculated ** Checked if Item Class is related to Event Sponsor Package.</inlineHelpText>
    <label>Is Sponsor Class</label>
    <type>Checkbox</type>
</CustomField>