unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Active_Assignments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Active_Assignments__c</fullName>
    <description>** System Calculated ** Identifies the number of active Assignments related to this class.</description>
    <inlineHelpText>** System Calculated ** Identifies the number of active Assignments related to this class.</inlineHelpText>
    <label>Active Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>