unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Assign_to_Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assign_to_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Assignments by default will be linked directly to the related Item without a parent &quot;Assignment SObject&quot;.</description>
    <inlineHelpText>When checked, Assignments by default will be linked directly to the related Item without a parent &quot;Assignment SObject&quot;.</inlineHelpText>
    <label>Assign to Item</label>
    <type>Checkbox</type>
</CustomField>