unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Assignment_SObject__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assignment_SObject__c</fullName>
    <description>** Conditionally Required ** The API name of the custom object to create when a &quot;Assignable&quot; Item is purchased. Required if &quot;Enable Assignments&quot; is checked.</description>
    <inlineHelpText>** Conditionally Required ** The API name of the custom object to create when a &quot;Assignable&quot; Item is purchased. Required if &quot;Enable Assignments&quot; is checked.</inlineHelpText>
    <label>Assignment SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>