unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Assignments_Display_Label__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assignments_Display_Label__c</fullName>
    <description>The label to display in the wizard for the step related to assigning people to a subscription.</description>
    <inlineHelpText>The label to display in the wizard for the step related to assigning people to a subscription.</inlineHelpText>
    <label>Assignments Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>