unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Available_Inventory__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Available_Inventory__c</fullName>
    <description>Identifies maximum number of available Items related to class.</description>
    <inlineHelpText>Identifies maximum number of available Items related to class.</inlineHelpText>
    <label>Available Inventory</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>