unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Item Classes</relationshipLabel>
    <relationshipName>Item_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>