unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Deferred_Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Deferred_Revenue_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GL Account Where Deferred Revenue Recognition is Tracked</description>
    <inlineHelpText>GL Account Where Deferred Revenue Recognition is Tracked</inlineHelpText>
    <label>Deferred Revenue Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Item Classes(Deferred Revenue Account)</relationshipLabel>
    <relationshipName>Item_Classes1</relationshipName>
    <type>Lookup</type>
</CustomField>