unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Deferred_Revenue_Term__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Deferred_Revenue_Term__c</fullName>
    <description>Term the Revenue has to be deferred if not a Subscription.</description>
    <inlineHelpText>Term the Revenue has to be deferred if not a Subscription.</inlineHelpText>
    <label>Deferred Revenue Term (In Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>