unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Disable_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Disable_Scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Scheduling is disabled when an item of this class is purchased</description>
    <inlineHelpText>Scheduling is disabled when an item of this class is purchased</inlineHelpText>
    <label>Disable Scheduling</label>
    <type>Checkbox</type>
</CustomField>