unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Enable_Assignment_Inventory__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Assignment_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the system will track the number of active assignments related to the Item Class and auto-expire all related Items once the &quot;Assignment Inventory&quot; is less than or equal to the &quot;Active Assignments&quot;.</description>
    <inlineHelpText>When checked, the system will track the number of active assignments related to the Item Class and auto-expire all related Items once the &quot;Assignment Inventory&quot; is less than or equal to the &quot;Active Assignments&quot;.</inlineHelpText>
    <label>Enable Assignment Inventory</label>
    <type>Checkbox</type>
</CustomField>