unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Enable_Assignments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Assignments</label>
    <type>Checkbox</type>
</CustomField>