unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Enable_Item_Class_Inventory__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Item_Class_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the system will track the number of times any Item linked to this Item Class.</description>
    <inlineHelpText>When checked, the system will track the number of times any Item linked to this Item Class.</inlineHelpText>
    <label>Enable Item Class Inventory</label>
    <type>Checkbox</type>
</CustomField>