unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Flex_Day_of_the_Month__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Flex_Day_of_the_Month__c</fullName>
    <description>Deferred Revenue before flex day is treated as no partial credit and after flex day it will post the transactions from next month.</description>
    <inlineHelpText>Deferred Revenue before flex day is treated as no partial credit and after flex day it will post the transactions from next month.</inlineHelpText>
    <label>Flex Day of the Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>