unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Interview_Form_Display_Label__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Interview_Form_Display_Label__c</fullName>
    <description>The label to display in the wizard for the step related to completing the interview form questions.</description>
    <inlineHelpText>The label to display in the wizard for the step related to completing the interview form questions.</inlineHelpText>
    <label>Interview Form Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>