unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Items will be allowed to be linked to the Item Class. Defaults checked.</description>
    <inlineHelpText>When checked, Items will be allowed to be linked to the Item Class. Defaults checked.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>