unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Is_Event__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra event specific controls and features. Defaults unchecked.</description>
    <inlineHelpText>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra event specific controls and features. Defaults unchecked.</inlineHelpText>
    <label>Is Event</label>
    <type>Checkbox</type>
</CustomField>