unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Is_Inventoried__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Inventoried__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Items created that are associated with this Item Class will automatically be
enabled with inventory tracking options and controls. Defaults unchecked.</description>
    <inlineHelpText>When checked, Items created that are associated with this Item Class will automatically be
enabled with inventory tracking options and controls. Defaults unchecked.</inlineHelpText>
    <label>Is Inventoried</label>
    <type>Checkbox</type>
</CustomField>