unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Is_Service__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Items created that are associated with this Item Class will automatically be
enabled with service billing options and controls. Defaults unchecked.</description>
    <inlineHelpText>When checked, Items created that are associated with this Item Class will automatically be
enabled with service billing options and controls. Defaults unchecked.</inlineHelpText>
    <label>Is Service</label>
    <type>Checkbox</type>
</CustomField>