unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Is_Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Shipping_Carrier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to create a Shipping Carrier.</description>
    <inlineHelpText>Select the checkbox to create a Shipping Carrier.</inlineHelpText>
    <label>Is Shipping Carrier</label>
    <type>Checkbox</type>
</CustomField>