unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Refresh__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Refresh will copy all the values for every field that is similar to its children Item field records.</description>
    <inlineHelpText>Refresh Items linked to this Item Class with updated Price Rules and Access Permissions as they are currently configured.</inlineHelpText>
    <label>Refresh</label>
    <type>Checkbox</type>
</CustomField>