unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Require_Assignments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Require_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Items linked to the Item Class by default will require Assignment prior to posting a Sales Order. Defaults unchecked.</description>
    <inlineHelpText>When checked, Items linked to the Item Class by default will require Assignment prior to posting a Sales Order. Defaults unchecked.</inlineHelpText>
    <label>Require Assignments</label>
    <type>Checkbox</type>
</CustomField>