unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Require_Shipping__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Require_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra shipping/delivery options and controls. Defaults unchecked.</description>
    <inlineHelpText>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra shipping/delivery options and controls. Defaults unchecked.</inlineHelpText>
    <label>Require Shipping</label>
    <type>Checkbox</type>
</CustomField>