unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Revenue_Recognition_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Revenue_Recognition_Date__c</fullName>
    <description>Revenue recognition Date for deferred Revenue When Specific Date is selected for Recognition Rule</description>
    <inlineHelpText>Revenue recognition Date for deferred Revenue When Specific Date is selected for Recognition Rule</inlineHelpText>
    <label>Revenue Recognition Date</label>
    <type>Date</type>
</CustomField>