unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Revenue_Recognition_Term_Rule__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Revenue_Recognition_Term_Rule__c</fullName>
    <description>How you want recognize revenue over time.</description>
    <inlineHelpText>How you want recognize revenue over time.</inlineHelpText>
    <label>Revenue Recognition Term Rule</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OrderApi__Revenue_Recognition_Rule__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No Partial Credit</fullName>
            </value>
            <value>
                <fullName>Flex Day</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>