unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Shipping_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Shipping GL Account.</description>
    <inlineHelpText>Identifies the Shipping GL Account.</inlineHelpText>
    <label>Shipping GL Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Item Classes (Shipping GL Account)</relationshipLabel>
    <relationshipName>Item_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>