unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Sold_Inventory__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sold_Inventory__c</fullName>
    <description>** System Calculated ** Identifies the number of items sold related to this class.</description>
    <inlineHelpText>** System Calculated ** Identifies the number of items sold related to this class.</inlineHelpText>
    <label>Sold Inventory</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>