unpackaged/main/default/objects/OrderApi__Item_Class__c/fields/OrderApi__Tax_Class__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Tax_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populate this field for items that need to apply tax.</description>
    <inlineHelpText>Populate this field for items that need to apply tax.</inlineHelpText>
    <label>Tax Class</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Item Classes</relationshipLabel>
    <relationshipName>Item_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>