unpackaged/main/default/objects/OrderApi__Item_Class__c/listViews/General_Items.listView-meta.xml
<ListView>
    <fullName>General_Items</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Business_Group__c</columns>
    <columns>OrderApi__Description__c</columns>
    <columns>OrderApi__Enable_Assignments__c</columns>
    <columns>OrderApi__Assignment_SObject__c</columns>
    <columns>OrderApi__Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Ticket Class,Schedule Class,Sponsor Class</value>
    </filters>
    <label>General Items</label>
</ListView>