unpackaged/main/default/objects/OrderApi__Item_Class__c/listViews/Training.listView-meta.xml
<ListView>
    <fullName>Training</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>FON</value>
    </filters>
    <label>Training</label>
</ListView>